# trading-bot

./: .gitignore  README.md  SETUP_GUIDE.md
trading-bot-backend/: fly.toml  pyproject.toml  render.yaml  requirements.txt
trading-bot-backend/app/: database.py  main.py
trading-bot-frontend/: .env  index.html  package-lock.json  package.json
trading-bot-frontend/src/: App.tsx  vite-env.d.ts
