[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.121.2"}
psycopg = {extras = ["binary"], version = "^3.2.12"}
ccxt = "^4.5.19"
cryptography = "^46.0.3"
python-dotenv = "^1.2.1"
pydantic-settings = "^2.12.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.28.1"
pyjwt = "^2.10.1"
bcrypt = "^5.0.0"
sqlalchemy = "^2.0.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
